# embodied-ai-architect

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  camera_lidar.md  create_torchvision_model.py  depth-any-camera.md  model-zoo-plan.md  pyproject.toml  quick-start.txt  requirements.txt  test_model.pt  test_model.py
.embodied-ai/: config.yaml
.github/workflows/: deploy-docs.yml
benchmarks/: run_operator_benchmarks.py
benchmarks/operators/: __init__.py  base.py  catalog_updater.py  control.py  hardware_detect.py  perception.py  runner.py  state_estimation.py
config/kubernetes/: README.md  namespace.yaml  rbac.yaml
docs/: REPORT_SERVER.md  SECURITY_SUMMARY.md  agentic-architecture-comparison.md  benchmark-harness.md  build_pitch_deck.py  business-models.md  client-demo-guide.md  demo-guide.md  deployment-guide.md  executive-demo-guide.md  graphs_tools_guide.md  interactive-chat.md  knowledge-base-architecture.md  kpu-simulator-requirements.md  mcp-architectures.md  model-zoo-guide.md  opening-slide-options.md  pitch-deck-dependency-trap.md  pitch-deck-dependency-trap.pptx  render_slides.py  runnable-operators.md  ryzen-ai-nuc-benchmark-procedures.md  synthesis-timeout.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/public/: llms.txt
docs/architecture/: software-architecture.md
docs/plans/: agent-packaging-strategy.md  agentic-ai-dynamics.md  agentic-framework-assessment.md  agentic-system-implementation-plan.md  agentic-tool-architecture.md  cli-architecture.md  deployment-agent.md  embodied-ai-application-architecture.md  embodied-ai-application-implementation-plan.md  embodied-ai-codesign-subtasks.md  knowledge-base-schema.md  kubernetes-backend-architecture.md  langgraph-migration-plan.md  langgraph-operator-orchestration.md  model-management.md  phase2-framework-architecture.md  phase3-kpu-floorplan-rtl-generation.md  phase4-integration-and-evaluation.md  prompt-test-suite-architecture.md  reporting-architecture.md  roadmap-devteam.md  roadmap-documentation.md  roadmap-phase-1.md  roadmap-phase-2.md  roadmap-phase-3.md  roadmap-summary.md  roadmap-system-architecture.md  roadmap.md  ryzen-ai-nuc-demo-plan.md  ryzen-ai-nuc-demo.md  security-architecture.md  self-reflection.md  shared-schema-repo-architecture.md  software-architecture-catalog-assessment.md  target-system-architecture.md  tool-architecture.md  tool-enhancements.md  value-proposition.md
docs/research/: VLA-vs-WorldModel.md  VLA.md  agentic-ai-efforts.md  cost-functions-tradeoffs.md  design-assistant.md  drone-pipeline.md  example-prompt.md  skydio-autonomy-engine.md
docs/sessions/: 2025-11-19-drone-perception-pipeline.md  2025-11-20-drone-perception-phase2-stereo.md  2025-11-21-drone-perception-phase3-tracking-improvements.md  2025-12-08-claude-code-onboarding.md  2025-12-16-interactive-chat-agent.md  2025-12-18-chat-cli-verification.md  2025-12-20-agentic-architecture-schemas.md  2025-12-21-cross-repo-claude-documentation.md  2025-12-23-soc-optimizer-recursion-fix.md  2026-01-02-operator-benchmarking-graphs-integration.md  2026-01-03-benchmark-harness-operators.md  2026-01-14-knowledge-base-and-documentation-roadmap.md  2026-01-15-docs-site-implementation.md  2026-02-12-phase3-kpu-rtl.md  (+6 more)
examples/: demo_dse_pareto.py  demo_experience_cache.py  demo_full_campaign.py  demo_hitl_safety.py  demo_kpu_rtl.py  demo_soc_designer.py  demo_soc_optimizer.py  kubernetes_scaling_example.py  remote_benchmark_example.py  simple_workflow.py
scripts/: README.md  record_webcam.py  run_verdict_tests.sh
tests/: conftest.py  test_bandwidth.py  test_cli_demo.py  test_cost_tracking.py  test_demo_acceptance.py  test_eda_tools.py  test_evaluation.py  test_evaluator.py  test_experience.py  test_experience_specialist.py  test_floorplan.py  test_golden_traces.py  test_governance.py  test_graphs_integration.py  test_kpu_config.py  test_kpu_integration.py  test_kpu_loop.py  test_kpu_specialists.py  test_manufacturing.py  test_memory.py  test_optimizer.py  test_pareto.py  test_planner_dispatcher.py  test_rtl_integration.py  test_rtl_loop.py  test_rtl_specialists.py  test_rtl_templates.py  test_safety.py  test_scoring.py  test_soc_graph.py  test_soc_state.py  test_specialists.py  test_technology.py  test_verdict_tools_cli.py
(+280 files in other folders)
