[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-ai-architect"
version = "0.4.1"
description = "Hardware/Software Codesign Space Exploration and Optimization Environment for Embodied AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Branes-ai Team"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
remote = [
    "paramiko>=3.0.0",  # SSH connections
]
kubernetes = [
    "kubernetes>=28.0.0",  # K8s client
]
chat = [
    "anthropic>=0.39.0",  # Claude API for interactive chat
]
langgraph = [
    "langgraph>=0.2.0",                      # State machine framework
    "langchain-anthropic>=0.3.0",            # Claude integration for LangGraph
    "langgraph-checkpoint-sqlite>=2.0.0",    # SQLite checkpointing for save/resume
]
jetson = [
    "tensorrt>=8.6.0",              # TensorRT for Jetson deployment
    "pycuda>=2022.1",               # CUDA Python bindings for calibration
    "onnxruntime>=1.16.0",          # ONNX Runtime for validation baseline
    "Pillow>=9.0.0",                # Image loading for calibration
]
openvino = [
    "openvino>=2024.0.0",           # OpenVINO for Intel/AMD deployment
    "nncf>=2.7.0",                  # Neural Network Compression Framework for INT8
    "onnxruntime>=1.16.0",          # ONNX Runtime for validation baseline
    "Pillow>=9.0.0",                # Image loading for calibration
]
coral = [
    "tensorflow>=2.13.0",           # TensorFlow for TFLite conversion
    "onnx2tf>=1.20.0",              # ONNX to TensorFlow conversion
    "onnxruntime>=1.16.0",          # ONNX Runtime for validation baseline
    "Pillow>=9.0.0",                # Image loading for calibration
    # Note: pycoral and edgetpu_compiler installed separately on device
]
all = [
    "paramiko>=3.0.0",
    "kubernetes>=28.0.0",
    "anthropic>=0.39.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "onnxruntime>=1.16.0",
    "Pillow>=9.0.0",
]

[project.scripts]
branes = "embodied_ai_architect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
